@@ -1,3 +1,7 @@
+10/18/2002
+	- Race condition fixes and memory usage improvements to the
+	  NameSet class, used by Cache and Zone.
+
 10/16/2002
 	- 1.3.0 released.
 
